[package]
name = "traffic-light-app"
documentation.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sails-rtl.workspace = true
gstd.workspace = true